--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Felipe Morais</title>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Felipe</a>
     
+        <nav>
+            <a href="#" class="logo">Home</a>
+            <a href="#" class="logo">WHO AM I?</a>
+            <a href="#" class="logo">PORTIFOLIO</a>
+        </nav>
+    </header>
+    <section class="Home">
+        <div class="homeimg">
+            <img src="C:\Users\felip\Desktop\siteportifolio\imgsrc\file.png" alt="Felipe logo">
+        </div>
+        <div class="home-content">
+            <h1>Felipe <span>Morais</span></h1>
+            <h3 class="texto idk">Software Engineer</h3>
+        </div>
+    </section>
 </body>
 </html>
