--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="Home">
         <div class="homeimg">
-            <img src="C:\Users\felip\Desktop\siteportifolio\imgsrc\file.png" alt="Felipe logo">
+            <img src="imgsrc/file.png" alt="Felipe logo">
         </div>
         <div class="home-content">
             <h1>Felipe <span>Morais</span></h1>
