add logos e ajeitei uns BO

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <div class="home-content">
             <h1>Felipe <span>Morais</span></h1>
             <h3 class="texto idk">Software Engineer</h3>
+            <p>Java|JavaScript|Python|Node.js</p>
+            <div>
+                <a href="#"><img class="github" src="imgsrc/GitHub-Mark-ea2971cee799.png"></i></a>
+                <a href="#"><img class="x" src="imgsrc/a.png"></i></a>
+                <a href="#"><img class="linkedin" src="imgsrc/linkedin-icon-512x512-um6pcf27.png"></i></a>
+            </div>
         </div>
     </section>
 </body>
