fonts e preguiça pura

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Felipe Morais</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Alike+Angular&display=swap');
+    </style>
 </head>
 <body>
     <header>
