--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#" class="logo">Felipe</a>
     
         <nav>
-            <a href="#" class="logo">Home</a>
+            <a href="#" class="logo">HOME</a>
             <a href="#" class="logo">WHO AM I?</a>
             <a href="#" class="logo">PORTIFOLIO</a>
         </nav>
