nao tenho capacidade mental pra fazer isso

--- a/index.html
+++ b/index.html
@@ -3,35 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Felipe Morais</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Alike+Angular&display=swap');
-    </style>
+    <title>Home - Felipe Morais</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Alike+Angular&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Felipe</a>
-    
         <nav>
-            <a href="#" class="logo">HOME</a>
-            <a href="#" class="logo">WHO AM I?</a>
-            <a href="#" class="logo">PORTIFOLIO</a>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="whoami.html">WHO AM I?</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+            </ul>
+            <div class="social-icons">
+                <a href="#"><img src="imgsrc/a.png" alt="Instagram"></a>
+                <a href="#"><img src="imgsrc/linkedin-icon-512x512-um6pcf27.png" alt="LinkedIn"></a>
+                <a href="#"><img src="imgsrc/GitHub-Mark-ea2971cee799.png" alt="GitHub"></a>
+            </div>
         </nav>
     </header>
-    <section class="Home">
-        <div class="homeimg">
-            <img src="imgsrc/file.png" alt="Felipe logo">
-        </div>
-        <div class="home-content">
-            <h1>Felipe <span>Morais</span></h1>
-            <h3 class="texto idk">Software Engineer</h3>
-            <p>Java|JavaScript|Python|Node.js</p>
-            <div>
-                <a href="#"><img class="github" src="imgsrc/GitHub-Mark-ea2971cee799.png"></i></a>
-                <a href="#"><img class="x" src="imgsrc/a.png"></i></a>
-                <a href="#"><img class="linkedin" src="imgsrc/linkedin-icon-512x512-um6pcf27.png"></i></a>
-            </div>
+
+    <section class="hero">
+        <img src="imgsrc/file.png" alt="Profile Picture" class="profile-pic">
+        <div class="text">
+            <h1>FELIPE MORAIS</h1>
+            <h2>SOFTWARE ENGINEER</h2>
+            <p>PYTHON | JAVA | JAVASCRIPT | NODE.JS</p>
         </div>
     </section>
 </body>
