alinhei a div do nav XDXD

--- a/index.html
+++ b/index.html
@@ -5,26 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Felipe Morais</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Alike+Angular&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
+        <img class="logo" src="imgsrc/unreal death.png" alt="Logo">
         <nav>
-            <ul>
+            <ul class="navlinks">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="whoami.html">WHO AM I?</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">WHO AM I</a></li>
+                <li><a href="#">PORTIFOLIO</a></li>
             </ul>
-            <div class="social-icons">
-                <a href="#"><img src="imgsrc/a.png" alt="Instagram"></a>
-                <a href="#"><img src="imgsrc/linkedin-icon-512x512-um6pcf27.png" alt="LinkedIn"></a>
-                <a href="#"><img src="imgsrc/GitHub-Mark-ea2971cee799.png" alt="GitHub"></a>
-            </div>
         </nav>
+        <a href="#" class="cta"><button>CONTACT ME!</button></a>
     </header>
 
     <section class="hero">
-        <img src="imgsrc/file.png" alt="Profile Picture" class="profile-pic">
+        <img  class="ftoexemplo" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="Profile Picture" class="profile-pic">
         <div class="text">
             <h1>FELIPE MORAIS</h1>
             <h2>SOFTWARE ENGINEER</h2>
