alinhei tudo pt2

--- a/index.html
+++ b/index.html
@@ -13,20 +13,27 @@
         <nav>
             <ul class="navlinks">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">WHO AM I</a></li>
+                <li><a href="whoami.html">WHO AM I</a></li>
                 <li><a href="#">PORTIFOLIO</a></li>
             </ul>
         </nav>
         <a href="#" class="cta"><button>CONTACT ME!</button></a>
     </header>
-
+    <img  class="ftoexemplo" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="Profile Picture" class="profile-pic">
     <section class="hero">
-        <img  class="ftoexemplo" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="Profile Picture" class="profile-pic">
+        
         <div class="text">
             <h1>FELIPE MORAIS</h1>
             <h2>SOFTWARE ENGINEER</h2>
             <p>PYTHON | JAVA | JAVASCRIPT | NODE.JS</p>
         </div>
+        <div class="whoami">
+            <h3> Press Enter to know me better!</h3>
+        </div>
+        <div class="copyright">
+            <p>©unreal club 2025 exclusive</p>
+        </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
