--- a/whoami.html
+++ b/whoami.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Who Am i?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <img class="logo" src="imgsrc/unreal death.png" alt="Logo">
+        <nav>
+            <ul class="navlinks">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="whoami.html">WHO AM I</a></li>
+                <li><a href="#">PORTIFOLIO</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="cta"><button>CONTACT ME!</button></a>
+    </header>
+    <div class="resumo">
+    <p>I’m a 18 year old computer science student, ex video-editor,<br> passionate about traveling and technology, currently living in Aracaju - Brazil.<br> I like spending my time going to the gym,<br> studying, playing competitive games and watching anime.<br>                                                       At the moment I’m studying Java, Python, Node.js and JavaScript.</p>
+    </div>
 </body>
 </html>
