--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     </header>
     
     <section class="hero">
-        <div class="image-container">
-            <img  class="ftoexemplo" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="Profile Picture" class="profile-pic">
-        </div>
+        <div class="container" id="xibiu"> </div>    
         <div class="text">
             <h1>FELIPE MORAIS</h1>
             <h2>SOFTWARE ENGINEER</h2>
