--- a/index.html
+++ b/index.html
@@ -11,29 +11,28 @@
     <header>
         <img class="logo" src="imgsrc/unreal death.png" alt="Logo">
         <nav>
-            <ul class="navlinks">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="whoami.html">WHO AM I</a></li>
-                <li><a href="#">PORTIFOLIO</a></li>
-            </ul>
-        </nav>
-        <a href="#" class="cta"><button>CONTACT ME!</button></a>
+        <ul class="navlinks">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="whoami.html">WHO AM I</a></li>
+            <li><a href="#">PORTIFOLIO</a></li>
+        </ul>
+    </nav>
+    <a href="#" class="cta"><button>CONTACT ME!</button></a>
     </header>
-    
-    <section class="hero">
-        <div class="container" id="xibiu"> </div>    
-        <div class="text">
+    <div class="text">
+        <img id="i" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="">  
+        <div id="textoimg">
             <h1>FELIPE MORAIS</h1>
             <h2>SOFTWARE ENGINEER</h2>
             <p>PYTHON | JAVA | JAVASCRIPT | NODE.JS</p>
         </div>
-        <div class="whoami">
-            <h3> Press Enter to know me better!</h3>
-        </div>
-        <div class="copyright">
-            <p>©unreal club 2025 exclusive</p>
-        </div>
-    </section>
-    <script src="main.js"></script>
+    </div>
+    <div class="whoami">
+        <h3> Press Enter to know me better!</h3>
+    </div>
+    <div class="copyright">
+        <p>©unreal club 2025 exclusive</p>
+    </div>
+<script src="main.js"></script>
 </body>
 </html>
