--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="#" class="cta"><button>CONTACT ME!</button></a>
     </header>
     <div class="text">
-        <img id="i" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="">  
+        <img id="imagemcentro" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="">  
         <div id="textoimg">
             <h1>FELIPE MORAIS</h1>
             <h2>SOFTWARE ENGINEER</h2>
