--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <nav>
         <ul class="navlinks">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="whoami.html">WHO AM I</a></li>
-            <li><a href="#">PORTIFOLIO</a></li>
+            <li><a href="portifolio.html">PORTIFOLIO</a></li>
         </ul>
     </nav>
     <a href="#" class="cta"><button>CONTACT ME!</button></a>
@@ -28,7 +27,7 @@
         </div>
     </div>
     <div class="whoami">
-        <h3> Press Enter to know me better!</h3>
+        <h3> Press Enter to see my portifolio!</h3>
     </div>
     <div class="copyright">
         <p>©unreal club 2025 exclusive</p>
