--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="portifolio.html">PORTIFOLIO</a></li>
         </ul>
     </nav>
-    <a href="#" class="cta"><button>CONTACT ME!</button></a>
+    <a href="https://linktr.ee/shineatnight" target="_blank" class="cta"><button>CONTACT ME!</button></a>
     </header>
     <div class="text">
         <img id="imagemcentro" src="imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg" alt="">  
