--- a/portifolio.html
+++ b/portifolio.html
@@ -15,22 +15,22 @@
                 <li><a href="portifolio.html">PORTIFOLIO</a></li>
             </ul>
         </nav>
-        <a href="#" class="cta"><button>CONTACT ME!</button></a>
+        <a href="https://linktr.ee/shineatnight" target="_blank" class="cta"><button>CONTACT ME!</button></a>
     </header>
     <section id="projetos" class="containerportifolio">
         <div class="card1">
             <img src="imgsrc/9fb7784c52035e699ee0aae19cc87225.jpg" alt="placeholder projeto 1">
             <div class="project-info">
                 <h3>Portifolio Website</h3>
-                <p>Made with HTML, Css and Js</p>
+                <p>HTML, Css and Js</p>
                 <a href="https://github.com/epitafioss/site-portifolio" target="_blank" class="project-link">GitHub</a>
             </div>
         </div>
         <div class="card2">
-            <img src="imgsrc/bac42222e805e624b827cee40c74ddec.jpg" alt="placeholder projeto 2">
+            <img src="imgsrc/Gge_7DqW4AAns0u.jpg"  alt="placeholder projeto 2">
             <div class="project2-info">
                 <h3>Test Grading System</h3>
-                <p>..............</p>
+                <p>Python, MySQL and Jinja2</p>
                 <a href="#" class="project-link2">GitHub</a>
             </div>
         </div>
